# graph_m_rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.graph/: pyvenv.cfg
app/config/: settings.py
app/src/: __init__.py  api.py  llm_client.py  main.py  mineru_client.py  minio_client.py  qdrant_client_api.py  qwen3_emb_client.py  s3_client.py
app/src/services/: mineru_service.py  minio_service.py  qdrant_service.py
app/src/utils/: data_model.py  emb_utils.py  llm_utils.py
app/static/: ask-document.html
app/tests/: init_index_test.py  test_pdf_upload.py
documet_index/: .env.example  README.md  __init__.py  main.py  manager.py  neo4j_service.py  test_file.json
documet_index/dtype/: __init__.py  document.py  region.py
mineru/: Dockerfile  README.md  api.py  cache_models.py  main.py  manager.py  mineru_wrapper.py  pre_download.py  requirements.txt  test_api.py  test_api_docker.py
mineru/config/: settings.py
qdrant/: api.py  dockerfile  main.py  requirements.txt
qdrant/config/: settings.py
src/graph_m_rag/: __init__.py
src/graph_m_rag/mineru/: __init__.py  api.py  mineru_wrapper.py
src/graph_m_rag/qdrant/: __init__.py  api.py
